email verification, entities, Roles,